# YaTackerHelper

./: .env.example  .gitignore  CLAUDE.md  DOCKER_COMMANDS.md  Dockerfile  Dockerfile.web  FIX_ENUM_INSTRUCTIONS.md  README.md  alembic.ini  docker-compose.bot-only.yml  docker-compose.full.yml  docker-compose.web-only.yml  docker-compose.yml  fix_enum.sql  main.py  pyproject.toml  requirements.txt  run_web.py
.claude/: settings.local.json
alembic/: README.md  env.py
alembic/versions/: 20251230_0052-f9c3e663a2a4_add_is_billing_contact_to_users.py  20251230_0540-92f0ae364202_add_payment_requests_table.py  20251230_0618-4afc7c6a1fe1_make_tracker_login_optional.py  20251230_0724-c5c18ce9d8cc_create_payment_request_status_enum.py  20251230_2120-4326f3baaf18_add_billing_notifications_table.py  20260109_1645-d29d49e2fc70_add_is_active_to_users.py
bot/: __init__.py  config.py  main.py  states.py
bot/database/: __init__.py  crud.py  database.py  models.py
bot/dialogs/: __init__.py  all_payment_requests.py  clone_project.py  main_menu.py  my_payment_requests.py  payment_request.py  project_info.py  user_management.py  user_settings.py
bot/handlers/: __init__.py  commands.py  payment_callbacks.py  pending_list_callbacks.py  (+1 more)
docs/: CHANGELOG.md  CLASSES_and_FILES.md  DOCKER.md  MIGRATIONS.md  PAYMENT_REQUESTS_FEATURE.md  TECH.md  TRANSIT.md  YaTrackerApi.md  YaTrackerQuery.md  aiogram_dialog.md
src/: __init__.py  project_cloner.py  tracker_client.py  utils.py
web/: INFRASTRUCTURE.md  README.md  __init__.py  app.py  components.py  config.py  database.py  telegram_utils.py  template.py
(+80 files in other folders)
